Navbar on small displays and login link fixes.

--- a/scss/theme/_navbar.scss
+++ b/scss/theme/_navbar.scss
@@ -1,5 +1,6 @@
 // Navbar.
 .navbar {
+    flex-wrap: nowrap;
     .popover-region {
         margin-top: 4px;
     }
